Se agrego sticky al nav y una imagen de usuario

--- a/Pantallas/Ingreso_Usuario/UsuarioBoostrap.html
+++ b/Pantallas/Ingreso_Usuario/UsuarioBoostrap.html
@@ -78,6 +78,14 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
               Buscar
             </button>
+            <img
+          src="https://cdn.shopify.com/s/files/1/0099/9562/files/Header-Icon-User.png?14597416339728210630"
+          width="30"
+          height="30"
+          class="d-inline-block align-top"
+          alt="https://cdn.shopify.com/s/files/1/0099/9562/files/Header-Icon-User.png?14597416339728210630"
+          loading="lazy"
+        />
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
               Usuario
             </button>
