--- a/Pantallas/Pantalla_Inicio/boostrap.html
+++ b/Pantallas/Pantalla_Inicio/boostrap.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-dark"
+      class="navbar sticky-top navbar-expand-lg navbar-dark"
       style="background-color: rgb(15, 76, 155)"
     >
       <a class="navbar-brand" href="#">
@@ -77,6 +77,14 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
             Buscar
           </button>
+          <img
+          src="https://cdn.shopify.com/s/files/1/0099/9562/files/Header-Icon-User.png?14597416339728210630"
+          width="30"
+          height="30"
+          class="d-inline-block align-top"
+          alt="https://cdn.shopify.com/s/files/1/0099/9562/files/Header-Icon-User.png?14597416339728210630"
+          loading="lazy"
+        />
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
             Usuario
           </button>
@@ -102,6 +110,7 @@
           <img
             src="https://assets.rockpapershotgun.com/images/2019/01/RTX-2060-in-PC.jpg"
             class="d-block w-100"
+            height="500"
             alt="https://assets.rockpapershotgun.com/images/2019/01/RTX-2060-in-PC.jpg"
           />
           <div class="carousel-caption d-none d-md-block">
