Se arreglaron algunos errores de las pantallas categoria, noticia y moderador

--- a/Pantallas/Moderador/denunciados.html
+++ b/Pantallas/Moderador/denunciados.html
@@ -61,7 +61,7 @@
     <div class="container">
         <h5>Comentarios denunciados <br></h5>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Gei el que lo lea
+            <li class="list-group-item">pasense por mi canal de youtube
                 <div class="float-right">
                     <button class="btn btn-primary" type="submit">Eliminar</button>
                     <button class="btn btn-primary" type="submit">Ignorar</button>
@@ -79,7 +79,7 @@
                     <button class="btn btn-primary" type="submit">Ignorar</button>
                 </div>
             </li>
-            <li class="list-group-item">Keervan ya te deposité, ya regresame a mis padres T_T
+            <li class="list-group-item">I feel that bro T_T
                 <div class="float-right">
                     <button class="btn btn-primary" type="submit">Eliminar</button>
                     <button class="btn btn-primary" type="submit">Ignorar</button>
