--- a/Pantallas/Noticia/Noticia.html
+++ b/Pantallas/Noticia/Noticia.html
@@ -103,6 +103,47 @@
         IFEA es solo un concepto, y la compañía parece no tener planes de llevarlo al ámbito comercial en
         el futuro previsible.
       </p>
+      <div class="container">
+        <h4>Comentarios<br></h4>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><h5>Anonimo<br></h5>Pasense por mi canal de youtube
+                <div class="float-right">
+                    <button class="btn btn-primary" type="submit">Denunciar</button>
+                </div>
+            </li>
+            <li class="list-group-item"><h5>Maria<br></h5>muy interesante
+                <div class="float-right">
+                    <button class="btn btn-primary" type="submit">Denunciar</button>
+                </div>
+            </li>
+            <li class="list-group-item"><h5>Juan<br></h5>que buena idea
+                <div class="float-right">
+                    <button class="btn btn-primary" type="submit">Denunciar</button>
+                </div>
+            </li>
+            <li class="list-group-item"><h5>Anonimo<br></h5>no se me hubiera ocurrido
+                <div class="float-right">
+                    <button class="btn btn-primary" type="submit">Denunciar</button>
+                </div>
+            </li>
+            <li class="list-group-item"><h5>Antonio<br></h5>El comunismo no funciona
+                <div class="float-right">
+                    <button class="btn btn-primary" type="submit">Denunciar</button>
+                </div>
+            </li>
+        </ul>
+    </div>
+      <div class="container text-left">
+        <div class="form-group">
+          <label for="comment">Comentario:</label>
+          <textarea class="form-control" rows="5" id="Comentario"></textarea>
+        </div>
+        <div class="row justify-content-center">
+            <button type="button" class="btn btn-primary btn-lg col-4">
+              Agregar
+            </button>
+          </div>
+      </div>
     </div>
   </article>
 
