--- a/Pantallas/Moderador/denunciados.html
+++ b/Pantallas/Moderador/denunciados.html
@@ -93,7 +93,27 @@
             </li>
         </ul>
     </div>
-
+    <div class="justify-content-center">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Primero</a>
+                  </li>
+              <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previo</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Siguiente</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">Ultimo</a>
+              </li>
+            </ul>
+          </nav>
+      </div>
 </body>
 
 </html>
